@@ -2,6 +2,7 @@ package ttl.larku.reflect.inject;
 
 import java.lang.annotation.Annotation;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 
 public class BeanFactory {
 	/**
@@ -13,8 +14,8 @@ public class BeanFactory {
 	 * @throws InstantiationException
 	 * @throws IllegalAccessException
 	 */
-	public static <T> T getBean(Class<T> clazz) throws InstantiationException, IllegalAccessException {
-		T result = clazz.newInstance();
+	public static <T> T getBean(Class<T> clazz) throws InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException {
+		T result = clazz.getConstructor().newInstance();
 		
 		doInjection(result);
 		
@@ -22,7 +23,7 @@ public class BeanFactory {
 	}
 
 	static final private Class<? extends Annotation> myInject = MyInject.class;
-	public static void doInjection(Object target) throws InstantiationException, IllegalAccessException {
+	public static void doInjection(Object target) throws InstantiationException, IllegalAccessException, NoSuchMethodException, InvocationTargetException {
 		Class<?> clazz = target.getClass();
 
 		Field [] fields = clazz.getDeclaredFields();
@@ -30,7 +31,7 @@ public class BeanFactory {
 		for(Field field : fields) {
 			if(field.isAnnotationPresent(myInject)) {
 				Class<?> targetType = field.getType();
-				Object newInstance = targetType.newInstance();
+				Object newInstance = targetType.getConstructor().newInstance();
 				field.setAccessible(true);
 				
 				field.set(target, newInstance);
